fixes for objective card choice